# dnd-notes

./: .gitignore
.github/workflows/: rust.yml
backend/: .env  .gitignore  Cargo.toml  Procfile
backend/src/: api_doc.rs  main.rs
backend/src/logs/: mod.rs  storage.rs  types.rs
frontend/: README.md  app.vue  nuxt.config.js  package.json
frontend/assets/styles/: index.scss
frontend/components/: Footer.vue  Input.vue  Log.vue  Logs.vue  Menu.vue  Tag.vue  Tags.vue
frontend/composables/: useApi.ts  useMitt.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
