[package]
name = "dnd-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
utoipa = { version = "1", features = ["actix_extras"] }
utoipa-swagger-ui = { version="1", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
