# Copyright (C) 2022 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "dnd-notes"
version = "0.1.0"
edition = "2021"
authors = ["Casper Meijn <casper@meijn.net>"]
description = "Backend service for dnd-notes."
repository = "https://github.com/caspermeijn/dnd-notes"
license = "GPL-3.0-or-later"

[dependencies]
actix-web = "4"
dotenv = "0.15"
utoipa = { version = "1", features = ["actix_extras"] }
utoipa-swagger-ui = { version="1", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
